--- a/src/components/employees/Employees.css
+++ b/src/components/employees/Employees.css
@@ -12,3 +12,13 @@
     padding: 0.5rem;
     margin: .5em;
 }
+.employee__footer {
+    margin: 1rem 0 0.25rem 0;
+    font-style: oblique;
+}
+
+.employee__header {
+    font-size:  large;
+    font-weight: 700;
+    line-height: 3rem;
+}
